--- a/using jupyter/using_jupyter_(need).ipynb
+++ b/using jupyter/using_jupyter_(need).ipynb
@@ -1,1 +1,343 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 Getting ready"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 3 Getting started with Jupyter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.1 It is all about running cells"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.2 A traditional start"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 4 All about Markdown"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 4.1 Rendering Markdown cells"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 4.2 Some basic syntax"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 4.3 Headings"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 4.4 Displaying Code"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 4.5 Links"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 4.6 Images"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 4.7 Tables"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 4.8 Lists"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 4.9 Equations"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Footnotes"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Using Jupyter (Need)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4c0584fa",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# 1 What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0e2f3610",
+   "metadata": {},
+   "source": [
+    "# 2 Getting ready"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "66437dda",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# 3 Getting started with Jupyter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5709b3db",
+   "metadata": {},
+   "source": [
+    "## 3.1 It is all about running cells"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "57468004",
+   "metadata": {},
+   "source": [
+    "## 3.2 A traditional start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "83aab17a-197b-4f50-89a5-1748e07ba416",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello World!')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7a37c64a",
+   "metadata": {},
+   "source": [
+    "# 4 All about Markdown"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d6bd0257",
+   "metadata": {},
+   "source": [
+    "## 4.1 Rendering Markdown cells"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7cc0717-40c9-498b-ab20-0d28e406fa85",
+   "metadata": {},
+   "source": [
+    "## 4.2 Some basic syntax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1fde0a3-6684-463c-aeb4-b023d14d37a2",
+   "metadata": {},
+   "source": [
+    "The ships *hung in the sky* in much the same way that **bricks don’t**.<sup>1</sup><sub>QUOTE</sub>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "77061681",
+   "metadata": {},
+   "source": [
+    "## 4.3 Headings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4329417-3d35-43ce-bcc0-ff7c29dedd3b",
+   "metadata": {},
+   "source": [
+    "### Top\n",
+    "I am the top of the world AHAHAHAHA\n",
+    "\n",
+    "#### Middle\n",
+    "Who says I cannot move\n",
+    "\n",
+    "##### Last\n",
+    "I will rise up again!!!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5c565fc8",
+   "metadata": {},
+   "source": [
+    "## 4.4 Displaying Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6ef1f73-bb09-4f89-8b63-a2a0fe9924d9",
+   "metadata": {},
+   "source": [
+    "`print('Hello World')`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be17d4b7-5be3-451a-8c3e-dc425adb7010",
+   "metadata": {},
+   "source": [
+    "`This is a code`\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "print('Hello World!')\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "837a7b54",
+   "metadata": {},
+   "source": [
+    "## 4.5 Links"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "212b8c53-5ded-4b7c-8391-fe63b2ed72b8",
+   "metadata": {},
+   "source": [
+    "[SP2273 Website](https://sps.nus.edu.sg/sp2273)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bdb33b8e",
+   "metadata": {},
+   "source": [
+    "## 4.6 Images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b26ce18-2fed-4b8f-a98c-fbf5085e6e68",
+   "metadata": {},
+   "source": [
+    "`Our love for NUS`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12e5fe1a-de6b-461d-afa4-27ffffb56d2c",
+   "metadata": {},
+   "source": [
+    "![](https://nus.edu.sg/images/default-source/base/logo.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d609d373",
+   "metadata": {},
+   "source": [
+    "## 4.7 Tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2999a7a1-c693-4276-a9d7-4cdab67b5227",
+   "metadata": {},
+   "source": [
+    "| A    |  B   |    C |\n",
+    "| :--- | :--: | ---: |\n",
+    "| a1   |  b1  |   c1 |\n",
+    "| a2   |  b2  |   c2 |\n",
+    "| a3   |  b3  |   c3 |"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f77d2f6e",
+   "metadata": {},
+   "source": [
+    "## 4.8 Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "905db779-6316-43c5-b11c-174d2dcac350",
+   "metadata": {},
+   "source": [
+    "can click command and click click click to change the numbered list to another list etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c12084ac-8ee2-41c1-bb71-0186968b2488",
+   "metadata": {},
+   "source": [
+    "1. Master Yoda\n",
+    "1. Luke Skywalker\n",
+    "1. Anakin Skywalker\n",
+    "\n",
+    "\n",
+    "- Master Yoda\n",
+    "- Luke Skywalker\n",
+    "- Anakin Skywalker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f758bec6-9297-48d3-8237-96b2e79f8a3f",
+   "metadata": {},
+   "source": [
+    "`If you need commands: `\n",
+    "[Commands for Math] (https://sps.nus.edu.sg/sp2273/docs/python_basics/01_using_jupyter/1_using-jupyter_need.html)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "87f7945b",
+   "metadata": {},
+   "source": [
+    "## 4.9 Equations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38c5396c-0fa7-421c-bf1f-9b1a948a40df",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ade97ceb-f36c-4739-88ec-5a3955ef971a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "36cddb75",
+   "metadata": {},
+   "source": [
+    "## Footnotes"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
