--- a/using jupyter , exercises/using_jupyter_(need),_exercises.ipynb
+++ b/using jupyter , exercises/using_jupyter_(need),_exercises.ipynb
@@ -15,7 +15,7 @@
    "id": "a1d275ea",
    "metadata": {},
    "source": [
-    "## Quadratic Equations"
+    "# Quadratic Equations"
    ]
   },
   {
@@ -24,17 +24,7 @@
    "id": "882f2582",
    "metadata": {},
    "source": [
-    "### Introduction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50c2c6d5-7ace-4db9-bc11-e130dae19adc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Your code here:"
+    "## Introduction"
    ]
   },
   {
@@ -58,17 +48,7 @@
    "id": "d4372bd6",
    "metadata": {},
    "source": [
-    "### Solutions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16baad95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
+    "## Solutions"
    ]
   },
   {
@@ -89,17 +69,7 @@
    "id": "940bacb3",
    "metadata": {},
    "source": [
-    "### Discriminant"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ace753e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
+    "## Discriminant"
    ]
   },
   {
@@ -120,7 +90,9 @@
   {
    "cell_type": "markdown",
    "id": "fb8384da-ac22-48b9-b5fa-341283d65b2c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "##### Exercise 2 (In your own words)"
    ]
@@ -131,14 +103,28 @@
    "metadata": {},
    "source": [
     "1. What is a Git repository?\n",
-    "- It is a location which stores files\n",
+    "\n",
+    "   It is a location which stores files\n",
+    "\n",
     "1. Git keeps tracks of ____BLANK____ in the files in our repository.\n",
-    "- \n",
+    "\n",
+    "    changes\n",
+    "\n",
     "1. What is a commit?\n",
-    "- It is the action of recording changes\n",
+    "\n",
+    "    It is the action of recording and managing changes.\n",
+    "\n",
     "1. What is a push?\n",
+    "\n",
+    "    It is to upload changes.\n",
+    "\n",
     "1. What is a pull?\n",
-    "1. What is the difference between GitHub and GitHub Desktop?"
+    "\n",
+    "    It is to download changes.\n",
+    "\n",
+    "1. What is the difference between GitHub and GitHub Desktop?\n",
+    "\n",
+    "    GitHub can be used for repository management in the cloud, while GitHub Desktop is used on local machines."
    ]
   }
  ],
