READY FOR REVIEW (jupyter exercise - need)

--- a/using jupyter , exercises/using_jupyter_(need),_exercises.ipynb
+++ b/using jupyter , exercises/using_jupyter_(need),_exercises.ipynb
@@ -90,9 +90,7 @@
   {
    "cell_type": "markdown",
    "id": "fb8384da-ac22-48b9-b5fa-341283d65b2c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "##### Exercise 2 (In your own words)"
    ]
@@ -104,7 +102,7 @@
    "source": [
     "1. What is a Git repository?\n",
     "\n",
-    "   It is a location which stores files\n",
+    "   It is a location which stores files.\n",
     "\n",
     "1. Git keeps tracks of ____BLANK____ in the files in our repository.\n",
     "\n",
