--- a/using jupyter , exercises/using_jupyter_(need),_exercises.ipynb
+++ b/using jupyter , exercises/using_jupyter_(need),_exercises.ipynb
@@ -24,7 +24,7 @@
    "id": "882f2582",
    "metadata": {},
    "source": [
-    "## Introduction"
+    "### Introduction"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "id": "d4372bd6",
    "metadata": {},
    "source": [
-    "## Solutions"
+    "### Solutions"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "id": "940bacb3",
    "metadata": {},
    "source": [
-    "## Discriminant"
+    "### Discriminant"
    ]
   },
   {
