--- a/fundamentals/fundamentals_(need).ipynb
+++ b/fundamentals/fundamentals_(need).ipynb
@@ -1,1 +1,596 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Fundamentals (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 Functions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 Remember"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 3 Python is interpreted"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 4 Python is sensitive."]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 5 Remember"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 6 Comments"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 7 Remember"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 8 = is not the same as =="]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 9 Remember"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 10 Use if to make decisions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 11 Remember"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 12 Indentations (spaces) are sooo IMPORTANT!"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 13 Remember"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 14 \u2018age\u2019 is English, age is a variable."]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 15 Brackets"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 16 Giving Python superpowers with Packages"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 16.1 Some Context"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 16.2 Importing the math package"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 16.3 Importing the numpy package"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 16.4 Why so many packages?"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 17 Remember"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 18 The dot (.)"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 19 Remember"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Footnotes"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Fundamentals (Need)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1f66e304",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "866d416d",
+   "metadata": {},
+   "source": [
+    "# 1 Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4d19e3f6-f198-40da-ab37-db14a499bb08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello world!')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "88bd1cd0",
+   "metadata": {},
+   "source": [
+    "## Remember"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18124ad6-e474-46ca-ac84-f5c2a96269a9",
+   "metadata": {},
+   "source": [
+    "- A function is ‘something’ that executes a specific task.\n",
+    "- A function may or may not accept arguments.\n",
+    "- We can define our own functions."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7394584c",
+   "metadata": {},
+   "source": [
+    "# 2 Python is interpreted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "35dd651a-3fa4-42f0-ba4b-656c58078b7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "Hello World again\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello World')\n",
+    "print('Hello World again')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "cba93649",
+   "metadata": {},
+   "source": [
+    "# 3 Python is sensitive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd8efd84-efa0-4fef-8655-0574ae49d3a8",
+   "metadata": {},
+   "source": [
+    "print('Hello World')\n",
+    "Print('Hello World')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b55f5931",
+   "metadata": {},
+   "source": [
+    "## Remember"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a966777e-b3a0-46d6-82bf-8c19c3bffd88",
+   "metadata": {},
+   "source": [
+    "Python is case-sensitive."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1a56156a",
+   "metadata": {},
+   "source": [
+    "# 4 Comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d229a285-f16d-4458-b7d6-784e4c5dd93a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One\n",
+      "Three\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is a comment\n",
+    "print('One')              # This is a comment.\n",
+    "# print('Two')            # The interpreter ignores this line.\n",
+    "print('Three')            # This is\n",
+    "                          # also a way to\n",
+    "                          # write comments"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3b8b35ba",
+   "metadata": {},
+   "source": [
+    "## Remember"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f4c960f-f450-477b-807c-3ce330aeb611",
+   "metadata": {},
+   "source": [
+    "Use comments to emphasize the purpose of the code."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d96dabfd",
+   "metadata": {},
+   "source": [
+    "# 5 = is not the same as =="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8c32d862-4b79-4636-9b23-a856f4c1f6ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batman\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = 'Batman'   # Make name carry 'Batman'\n",
+    "print(name)\n",
+    "\n",
+    "name == 'Superman'  # Tell me if name is equal to 'Batman'?\n",
+    "                  # Answer:  True or False"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "990bc5c5",
+   "metadata": {},
+   "source": [
+    "## Remember"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeaaac29-8e33-4cdf-b016-d1f68721154e",
+   "metadata": {},
+   "source": [
+    "- = is not the same as ==.\n",
+    "- = assigns a value and\n",
+    "- == asks a question."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "149a96b0",
+   "metadata": {},
+   "source": [
+    "# 6 Use if to make decisions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9fc281f0-1e51-4e13-a033-047d25be4718",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Batman!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Batman'\n",
+    "\n",
+    "if name == 'Batman':\n",
+    "    print('Hello Batman!')\n",
+    "else:\n",
+    "    print('Hello World!')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f8b846b4",
+   "metadata": {},
+   "source": [
+    "## Remember"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1ee7039-e29c-4ab0-81d0-c3a61f38c470",
+   "metadata": {},
+   "source": [
+    "You can use if to make decisions."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d4708f54",
+   "metadata": {},
+   "source": [
+    "# 7 Indentations (spaces) are sooo IMPORTANT!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4e90e9f3-eeba-4adf-a6e2-b3ae4dd1dec9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (1888031840.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[20], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(x)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "print(x)\n",
+    "\n",
+    "x = 10\n",
+    " print(x)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c7772eb3",
+   "metadata": {},
+   "source": [
+    "## Remember"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5e56720-d7b7-4951-8749-68977adf43a3",
+   "metadata": {},
+   "source": [
+    "- Indentations play a crucial role in Python; do not use them indiscriminately.\n",
+    "- : is used to designate a block of code."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "46cac937",
+   "metadata": {},
+   "source": [
+    "# 8 ‘age’ is English, age is a variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "160dd5d9-e091-4b62-aba6-f1d9490f7c6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "age\n",
+      "You're twenty years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 24\n",
+    "print(age)       # Print the value of the variable age\n",
+    "print(\"age\")     # Print the English word 'age'\n",
+    "\n",
+    "print(\"You're twenty years old.\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e96b386a",
+   "metadata": {},
+   "source": [
+    "# 9 Brackets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "85ea71fe-9bcf-4a9d-b47d-5b6614e4fce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello!')             # In functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "11454318-f617-43fe-9d0f-f93e87a79802",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1 + 2) * 5                 # For math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8719f863-747f-41ec-bf9d-31bdf756f130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[[1, 'A'], [2, 'B'], [3, 'C'], [4, 'D'], [5, 'E']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_list = [1, 2, 3, 4, 5]   # A 1D list\n",
+    "\n",
+    "py_list_2 = [               # A 2D list\n",
+    "                [1, \"A\"],      \n",
+    "                [2, \"B\"],\n",
+    "                [3, \"C\"],\n",
+    "                [4, \"D\"],\n",
+    "                [5, \"E\"]\n",
+    "]\n",
+    "print(py_list)\n",
+    "print(py_list_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b88b2923-e552-4dcd-b6b3-78f8c895e4cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bruce Wayne\n"
+     ]
+    }
+   ],
+   "source": [
+    "personal_info = {\n",
+    "    'Names': 'Batman',\n",
+    "    'Real Name': 'Bruce Wayne',\n",
+    "    'Age': 55,\n",
+    "    'Affiliation': 'Justice League',\n",
+    "    'Universe': 'DC'\n",
+    "}\n",
+    "print(personal_info['Real Name'])   "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5d984ac5",
+   "metadata": {},
+   "source": [
+    "# 16 Giving Python superpowers with Packages"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4b0c4353",
+   "metadata": {},
+   "source": [
+    "## 16.1 Some Context"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "71ee707b",
+   "metadata": {},
+   "source": [
+    "## 16.2 Importing the math package"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "53c9dbc9",
+   "metadata": {},
+   "source": [
+    "## 16.3 Importing the numpy package"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f63010a7",
+   "metadata": {},
+   "source": [
+    "## 16.4 Why so many packages?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "70388139",
+   "metadata": {},
+   "source": [
+    "# 17 Remember"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a040f9b8",
+   "metadata": {},
+   "source": [
+    "# 18 The dot (.)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "37e98961",
+   "metadata": {},
+   "source": [
+    "# 19 Remember"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1fc52c56",
+   "metadata": {},
+   "source": [
+    "## Footnotes"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
