Fundamentals completed (need)

--- a/fundamentals/fundamentals_(need).ipynb
+++ b/fundamentals/fundamentals_(need).ipynb
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "b88b2923-e552-4dcd-b6b3-78f8c895e4cd",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bruce Wayne\n"
+      "Bruce Wayne\n",
+      "DC\n"
      ]
     }
    ],
@@ -469,7 +470,8 @@
     "    'Affiliation': 'Justice League',\n",
     "    'Universe': 'DC'\n",
     "}\n",
-    "print(personal_info['Real Name'])   "
+    "print(personal_info['Real Name']) \n",
+    "print(personal_info['Universe'])"
    ]
   },
   {
