READY FOR REVIEW (Fundamentals - need)

--- a/fundamentals/fundamentals_(need).ipynb
+++ b/fundamentals/fundamentals_(need).ipynb
@@ -51,14 +51,7 @@
    "id": "88bd1cd0",
    "metadata": {},
    "source": [
-    "## Remember"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18124ad6-e474-46ca-ac84-f5c2a96269a9",
-   "metadata": {},
-   "source": [
+    "#### Remember\n",
     "- A function is ‘something’ that executes a specific task.\n",
     "- A function may or may not accept arguments.\n",
     "- We can define our own functions."
@@ -117,15 +110,8 @@
    "id": "b55f5931",
    "metadata": {},
    "source": [
-    "## Remember"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a966777e-b3a0-46d6-82bf-8c19c3bffd88",
-   "metadata": {},
-   "source": [
-    "Python is case-sensitive."
+    "#### Remember\n",
+    "- Python is case-sensitive."
    ]
   },
   {
@@ -139,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d229a285-f16d-4458-b7d6-784e4c5dd93a",
    "metadata": {},
    "outputs": [
@@ -162,20 +148,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7fa5d7e1-8b71-419a-a12f-1440b88dc53b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nMultiliners?\\nYea sign me \\nUP\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Multiliners?\n",
+    "Yea sign me \n",
+    "UP\n",
+    "\"\"\""
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "3b8b35ba",
    "metadata": {},
    "source": [
-    "## Remember"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f4c960f-f450-477b-807c-3ce330aeb611",
-   "metadata": {},
-   "source": [
-    "Use comments to emphasize the purpose of the code."
+    "#### Remember\n",
+    "- Use comments to emphasize the purpose of the code."
    ]
   },
   {
@@ -189,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "8c32d862-4b79-4636-9b23-a856f4c1f6ad",
    "metadata": {},
    "outputs": [
@@ -206,7 +210,7 @@
        "False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,14 +229,7 @@
    "id": "990bc5c5",
    "metadata": {},
    "source": [
-    "## Remember"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aeaaac29-8e33-4cdf-b016-d1f68721154e",
-   "metadata": {},
-   "source": [
+    "#### Remember\n",
     "- = is not the same as ==.\n",
     "- = assigns a value and\n",
     "- == asks a question."
@@ -249,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "9fc281f0-1e51-4e13-a033-047d25be4718",
    "metadata": {},
    "outputs": [
@@ -265,9 +262,9 @@
     "name = 'Batman'\n",
     "\n",
     "if name == 'Batman':\n",
-    "    print('Hello Batman!')\n",
+    "    print('Hello Batman!') #When it is true, indentation is needed, ':' to indicate when sth starts\n",
     "else:\n",
-    "    print('Hello World!')"
+    "    print('Hello World!') #When it is false"
    ]
   },
   {
@@ -276,15 +273,8 @@
    "id": "f8b846b4",
    "metadata": {},
    "source": [
-    "## Remember"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f1ee7039-e29c-4ab0-81d0-c3a61f38c470",
-   "metadata": {},
-   "source": [
-    "You can use if to make decisions."
+    "#### Remember\n",
+    "- You can use if to make decisions."
    ]
   },
   {
@@ -298,16 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "4e90e9f3-eeba-4adf-a6e2-b3ae4dd1dec9",
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (1888031840.py, line 5)",
+     "evalue": "unexpected indent (3840535622.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[20], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(x)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(x)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
@@ -325,14 +315,7 @@
    "id": "c7772eb3",
    "metadata": {},
    "source": [
-    "## Remember"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a5e56720-d7b7-4951-8749-68977adf43a3",
-   "metadata": {},
-   "source": [
+    "#### Remember\n",
     "- Indentations play a crucial role in Python; do not use them indiscriminately.\n",
     "- : is used to designate a block of code."
    ]
@@ -348,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "160dd5d9-e091-4b62-aba6-f1d9490f7c6d",
    "metadata": {},
    "outputs": [
@@ -480,7 +463,7 @@
    "id": "5d984ac5",
    "metadata": {},
    "source": [
-    "# 16 Giving Python superpowers with Packages"
+    "# 10 Giving Python superpowers with Packages"
    ]
   },
   {
@@ -489,7 +472,29 @@
    "id": "4b0c4353",
    "metadata": {},
    "source": [
-    "## 16.1 Some Context"
+    "## 10.1 Some Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2eae7057-5d69-45ad-82df-917fe1c19c0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sqrt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msqrt\u001b[49m(\u001b[38;5;241m4\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sqrt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sqrt(4)"
    ]
   },
   {
@@ -498,7 +503,38 @@
    "id": "71ee707b",
    "metadata": {},
    "source": [
-    "## 16.2 Importing the math package"
+    "## 10.2 Importing the math package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f2d429d4-b6b6-44ea-908c-5841633465d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4ac5a9dc-3fcd-461c-88ad-151445fcbaf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.sqrt(4)"
    ]
   },
   {
@@ -507,7 +543,38 @@
    "id": "53c9dbc9",
    "metadata": {},
    "source": [
-    "## 16.3 Importing the numpy package"
+    "## 10.3 Importing the numpy package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0905d2cd-3308-416c-b874-266ec1f19687",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "646f7b0b-2300-4176-92a0-555727414649",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.23606797749979"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(5)"
    ]
   },
   {
@@ -516,7 +583,28 @@
    "id": "f63010a7",
    "metadata": {},
    "source": [
-    "## 16.4 Why so many packages?"
+    "## 10.4 Why so many packages?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f492d5b1-dc1a-4bcf-aded-4a8d23f0933f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2., 3., 4.])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt([4, 9, 16])"
    ]
   },
   {
@@ -525,7 +613,10 @@
    "id": "70388139",
    "metadata": {},
    "source": [
-    "# 17 Remember"
+    "#### Remember\n",
+    "- You can give Python ‘superpowers’ by importing packages.\n",
+    "- You must import a package only once.\n",
+    "- There are different ways to import packages (e.g. with or without an ‘alias’)."
    ]
   },
   {
@@ -534,25 +625,69 @@
    "id": "a040f9b8",
    "metadata": {},
    "source": [
-    "# 18 The dot (.)"
+    "# 11 The dot (.)"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "37e98961",
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4a6fc503-6bb5-413b-b75d-7a0a41fec152",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I', 'am', 'Batman']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 19 Remember"
+    "#dot is used to indicate ownership. i belong to you hehe (...)\n",
+    "\n",
+    "\"I am Batman\".split()\n",
+    "\n",
+    "#1234.split() #doesn't work for number"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "1fc52c56",
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "82dc0410-8e86-4cc1-8144-9481488ecc63",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AAAAAAAAAABB'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Footnotes"
+    "'apple'.upper()\n",
+    "'apple'.title() #a function\n",
+    "x=1j+10\n",
+    "x.real #not a function, hence have no brackets, just a property\n",
+    "x.imag\n",
+    "'A'*10+'B'*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "11b31314-29dd-4f5c-8e39-ca59861e2f69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_print(text):\n",
+    "    print(text.upper())"
    ]
   }
  ],
