READY FOR REVEIW (Fundamentals exercise - need)

--- a/fundamentals  exercises/fundamentals_(need)_exercises.ipynb
+++ b/fundamentals  exercises/fundamentals_(need)_exercises.ipynb
@@ -14,7 +14,7 @@
    "id": "19e45be5-628f-4fc4-9ba2-45b3d1000052",
    "metadata": {},
    "source": [
-    "##### Exercise 1"
+    "#### Exercise 1"
    ]
   },
   {
@@ -23,8 +23,6 @@
    "metadata": {},
    "source": [
     "print()\n",
-    "\n",
-    "\n",
     "\n",
     "name = 'me'\n",
     "\n",
@@ -35,39 +33,32 @@
     "else:\n",
     "    print(alive)\n",
     "\n",
+    "##### *Age can be a variable and \"age\" is English*\n",
+    "*age=42*\n",
+    "*print(age)*\n",
+    "*print('age')*\n",
     "\n",
-    "\n",
-    "#Brackets\n",
-    "\n",
-    "#For math\n",
-    "\n",
+    "##### Brackets\n",
+    "##### *Used in functions*\n",
+    "##### For math\n",
     "(4+5)*1408\n",
-    "\n",
-    "\n",
-    "#For list\n",
-    "\n",
+    "##### For list\n",
     "list = [1, 2, 3, 4, 5]\n",
-    "\n",
-    "#For dictionary\n",
-    "\n",
+    "##### For dictionary\n",
     "personal_info = {\n",
     "'age'= \n",
     "'blood_type' = ''\n",
     "}\n",
-    "\n",
     "print(dictionary['age'])\n",
     "\n",
-    "\n",
-    "\n",
     "import math\n",
-    "\n",
     "math.sqrt\n",
-    "\n",
     "import numpy as np\n",
-    "\n",
     "np.sqrt\n",
+    "*np.sqrt([4, 9, 16])*\n",
+    "*array([2., 3., 4.])*\n",
     "\n",
-    "#as is for alias\n",
+    "'as' is for alias\n",
     "\n",
     "\"I am me\".split()"
    ]
@@ -77,12 +68,12 @@
    "id": "628afdd3-4513-4eb6-9f28-a2304b718c21",
    "metadata": {},
    "source": [
-    "##### Exercise 2"
+    "#### Exercise 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "4862e01b-2df8-43b6-a82f-73a5dfd0f095",
    "metadata": {},
    "outputs": [
@@ -90,15 +81,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 4 4.69041575982343\n"
+      "3 4 5\n"
      ]
     }
    ],
    "source": [
     "x, y = [3, 4]\n",
     "import math\n",
-    "z = math.sqrt(x*2 + y**2)\n",
-    "print(x, y, z)"
+    "z = math.sqrt(x**2 + y**2)\n",
+    "print(x, y, int(z))"
    ]
   },
   {
@@ -106,7 +97,130 @@
    "id": "8e22e6d2-1b28-48c2-ac12-37ed1bb6d37d",
    "metadata": {},
    "source": [
-    "##### Exercise 3"
+    "#### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae32227e-7218-4823-ad9b-2e762d112850",
+   "metadata": {},
+   "source": [
+    "|#|TERM|Description|\n",
+    "|:--:|:--|:--|\n",
+    "|1|Function|\"something\" that performs a specific task|\n",
+    "|2|Arguments|input needed for a function to work|\n",
+    "|3|Comments|text that provides explanation, and will not be interpreted|\n",
+    "|4|Indentations|used to indicate the start and end of a code|\n",
+    "|5|Packages|used to organise related modules into a single directory|\n",
+    "|6|.|indicates ownership|\n",
+    "|7|:|indicates start of an indented block|\n",
+    "|8|[]|used to define a list|\n",
+    "|9|[[[]]]|indicates subsets of a list|\n",
+    "|10|{}|used to define a dictionary|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2b4d3f58-9c23-48a1-838a-3830ca123689",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "None\n",
+      "2.0\n",
+      "haha\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#additional inquired things (please ignore)\n",
+    "#what is an output\n",
+    "import math\n",
+    "print(math.sqrt(4))\n",
+    "print([2,1,3].sort())\n",
+    "x=math.sqrt(4)\n",
+    "print(x)\n",
+    "output = print('haha')\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a50d248-1a2d-453f-995e-16d8326b2eeb",
+   "metadata": {},
+   "source": [
+    "#### Exercise 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "12c279c7-84e4-40ef-8bc5-0bfc27bdec78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#division\n",
+    "5/2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "84a32542-b617-444d-aa0f-9612c726f9a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#floor division\n",
+    "5//2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "527644fd-5d6c-45ce-b9ad-759c3e369a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#remainder\n",
+    "5%2"
    ]
   }
  ],
